# CMake

Modules/: GenerateExportHeader.cmake
Tests/Module/GenerateExportHeader/lib_shared_and_static/: CMakeLists.txt
Tests/Module/GenerateExportHeader/lib_shared_and_statictest/: CMakeLists.txt
Tests/Module/GenerateExportHeader/libshared/: CMakeLists.txt
Tests/Module/GenerateExportHeader/libsharedtest/: CMakeLists.txt
